force-app/main/default/objects/Topic_Configuration__mdt/Topic_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Topic Configuration</label>
    <pluralLabel>Topic Configurations</pluralLabel>
</CustomObject>