force-app/main/default/objects/Topic_Configuration__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>