force-app/main/default/objects/Topic_Configuration__mdt/fields/Object_Access__c.field-meta.xml
<CustomField>
    <fullName>Object_Access__c</fullName>
    <label>Object Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>