force-app/main/default/objects/Topic_Configuration__mdt/fields/Object_Visibility_dep__c.field-meta.xml
<CustomField>
    <fullName>Object_Visibility_dep__c</fullName>
    <label>Object Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>