force-app/main/default/objects/Topic_Configuration__mdt/fields/Object_Visibility_New__c.field-meta.xml
<CustomField>
    <fullName>Object_Visibility_New__c</fullName>
    <label>Object Visibility</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>