force-app/main/default/objects/Topic_Configuration__mdt/fields/Pill_Color__c.field-meta.xml
<CustomField>
    <fullName>Pill_Color__c</fullName>
    <label>Pill Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>light-yellow</fullName>
                <label>Light Yellow</label>
            </value>
            <value>
                <fullName>light-orange</fullName>
                <label>Light Orange</label>
            </value>
            <value>
                <fullName>light-green</fullName>
                <label>Light Green</label>
            </value>
            <value>
                <fullName>light-blue</fullName>
                <label>Light Blue</label>
            </value>
            <value>
                <fullName>light-purple</fullName>
                <label>Light Purple</label>
            </value>
            <value>
                <fullName>yellow</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>orange</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>green</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>blue</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>purple</fullName>
                <label>Purple</label>
            </value>
            <value>
                <fullName>dark-yellow</fullName>
                <label>Dark Yellow</label>
            </value>
            <value>
                <fullName>dark-orange</fullName>
                <label>Dark Orange</label>
            </value>
            <value>
                <fullName>dark-green</fullName>
                <label>Dark Green</label>
            </value>
            <value>
                <fullName>dark-blue</fullName>
                <label>Dark Blue</label>
            </value>
            <value>
                <fullName>dark-purple</fullName>
                <label>Dark Purple</label>
            </value>
            <value>
                <fullName>black</fullName>
                <label>Black</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>