force-app/main/default/objects/Topic_Configuration__mdt/fields/Pill_Style__c.field-meta.xml
<CustomField>
    <fullName>Pill_Style__c</fullName>
    <label>Pill Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fill</fullName>
                <label>Fill</label>
            </value>
            <value>
                <fullName>outline</fullName>
                <label>Outline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>