force-app/main/default/objects/Topic_Configuration__mdt/validationRules/Pill_Style_and_Pill_Color_are_dependent.validationRule-meta.xml
<ValidationRule>
    <fullName>Pill_Style_and_Pill_Color_are_dependent</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
NOT(ISBLANK(TEXT(Pill_Color__c))),
ISBLANK(TEXT(Pill_Style__c))
),
AND(
NOT(ISBLANK(TEXT(Pill_Style__c))),
ISBLANK(TEXT(Pill_Color__c))
)
)</errorConditionFormula>
    <errorDisplayField>Pill_Style__c</errorDisplayField>
    <errorMessage>Pill Style and Pill Color are dependent. Both are required when one is set.</errorMessage>
</ValidationRule>