force-app/main/default/objects/Topic_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Category__c</columns>
    <columns>Object_Visibility_Custom__c</columns>
    <columns>Object_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>